<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/bg_login_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textColor="@android:color/white"
        android:src="@mipmap/icon_logo"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:id="@+id/group_animate"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/group_edit"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">


            <com.example.hippoweex.ui.widget.edittext.UnderLineEditText
                style="@style/UnderLineEditText"
                android:focusable="true"
                android:inputType="phone"
                android:id="@id/edt_input_username"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_edt_height"
                android:hint="@string/fragment_login_input_username_hint"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.example.hippoweex.ui.widget.edittext.UnderLineEditText
                    android:inputType="textPassword"
                    style="@style/UnderLineEditText"
                    android:id="@id/edt_input_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/common_edt_height"
                    android:hint="@string/fragment_login_input_password_hint"/>

                <TextView
                    android:layout_centerVertical="true"
                    android:id="@id/text_find_password"
                    android:textColor="@color/main_text_color_red"
                    android:text="@string/fragment_login_input_findpassword"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.example.hippoweex.ui.widget.edittext.UnderLineEditText
                    android:inputType="number"
                    style="@style/UnderLineEditText"
                    android:id="@id/edt_input_code"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/common_edt_height"
                    android:hint="@string/fragment_login_input_code_hint"/>

                <ImageView
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:id="@+id/img_vericode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

        </LinearLayout>

        <Button
            android:layout_gravity="center_horizontal"
            android:id="@id/btn_confirm_login"
            style="@style/MainButton"
            android:text="@string/fragment_login_btn_confirm_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="18dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <View
            android:background="#343434"
            android:layout_width="52dp"
            android:layout_height="2px" />

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="12sp"
            android:text="@string/fragment_login_text_fastlogin"
            android:textColor="@color/main_text_color_hint_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:background="#343434"
            android:layout_width="52dp"
            android:layout_height="2px" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@mipmap/icon_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_centerInParent="true"
            android:id="@id/img_wechat"
            android:background="@mipmap/icon_wechat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:text="还没有账号?立即"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@id/text_register"
            android:textSize="14sp"
            android:textColor="@color/main_text_color_yellow"
            android:text="@string/fragment_login_text_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
